<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/nav_toolbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/feedback_content_label"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/feedback_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textMultiLine"
            android:hint="@string/feedback_content"
            android:gravity="top"
            android:padding="5dp"
            android:background="@drawable/edit_text_border"
            android:minLines="10"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/feedback_email_label"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/feedback_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:padding="5dp"
            android:inputType="textWebEmailAddress"
            android:hint="@string/feedback_email"/>

        <Button
            android:id="@+id/feedback_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWindowBar"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:text="@string/feedback_submit"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>